--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,24 +5,33 @@ name: Wurzelimperium Bot
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "*/59 * * * *"
+  schedule: # UTC timezone, execute every 2:10h
+    - cron: "10 0 * * *"
+    - cron: "35 2 * * *"
+    - cron: "45 4 * * *"
+    - cron: "55 6 * * *"
+    - cron: "05 9 * * *"
+    - cron: "15 11 * * *"
+    - cron: "25 13 * * *"
+    - cron: "35 15 * * *"
+    - cron: "45 17 * * *"
+    - cron: "55 19 * * *"
+    - cron: "05 22 * * *"
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Run script
-      run: |
-        python ./automated_script.py ${{ secrets.SERVER_NR }} ${{ secrets.USERNAME }} ${{ secrets.PASSWORD }} de
+      - uses: actions/checkout@v4
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Run script
+        run: |
+          python ./automated_script.py ${{ secrets.SERVER_NR }} ${{ secrets.USERNAME }} ${{ secrets.PASSWORD }} de -p -l
